# hive-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  hive_mind_project.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: publish.yml
Phases/: Phase_1.md  Phase_2.md  Phase_3.md  Phase_4.md  Phase_5.md  Phase_6.md
hive/: __init__.py  __main__.py
hive/cli/: audit.py  capture.py  hook.py  init.py  main.py  staging.py
hive/core/: audit.py  decay.py  dense.py  embedder.py  extract.py  guard.py  handoff.py  normalize.py  policy.py  reader.py  routing.py  writer.py
hive/db/: setup.py
packaging/npm/: .npmignore  README.md  package.json
scripts/: publish.sh
tests/: bench_recall.py  bench_rerank.py  bench_scale.py  bench_vector.py  diag_fails.py  eval_corpus.json  gen_eval_corpus.py  test_day1.py  test_day10.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
